# NestedMenu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
menus/: admin.py  models.py  signals.py
menus/templatetags/: menus.py
nestedmenu/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html
tests/: test_draw_menu.py  test_menu_advanced.py  test_menu_cache.py
