[tool.poetry]
name = "nestedmenu"
version = "0.1.0"
description = ""
authors = ["MIR <mirazimov.kr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
django = "^5.2.3"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
isort = "^6.0.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
